<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:layout_below="@+id/temp"
            android:text="@string/label1"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <ListView
            android:layout_margin="30dp"
            android:id="@+id/set_places"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:divider="@color/dark_purple"
            android:dividerHeight="1dp">
        </ListView>

        <TextView
            android:id="@+id/label2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:layout_below="@+id/set_places"
            android:text="@string/label2"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@+id/label2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:textColor="@color/white"
                android:paddingTop="16dp"
                android:text="@string/wifi_only"/>

            <CheckBox
                android:id="@+id/chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_alignParentRight="true"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>