<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:id="@+id/layout"
    tools:context=".Main">
    <RelativeLayout
        android:id="@+id/date_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/night"/>

        <Switch
            android:id="@+id/mySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:switchMinWidth="70dp"
            android:layout_toRightOf="@+id/night"/>

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/mySwitch"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/day"/>

        <TextView
            android:id="@+id/date"
            android:textColor="#fff"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:layout_below="@+id/mySwitch"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/ic_bigWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/date_content"
        android:textSize="200sp"
        android:textColor="@color/white"/>

    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/ic_bigWeather"
        android:layout_marginRight="10dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/temp"
            android:text="@string/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/temp_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temp"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temp_words"
            android:textSize="30sp"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_below="@+id/main_content"
        android:textColor="@color/white"
        android:textSize="16sp"/>
</RelativeLayout>
