<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:id="@+id/layout"
    tools:context=".Main">

    <TextView
        android:id="@+id/date"
        android:textColor="#fff"
        android:textSize="27sp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/dark_purple"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/night"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_toLeftOf="@+id/mySwitch"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/night"/>

    <Switch
        android:id="@+id/mySwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchMinWidth="70dp"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/day"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:paddingRight="5dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:text="@string/day"/>

    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/ic_bigWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="200sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/temp"
            android:text="@string/no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ic_bigWeather"
            android:textSize="50sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/temp_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temp"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/temp_words"
            android:textSize="30sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="..."
            android:textSize="30sp"
            android:layout_below="@+id/wind"
            android:textColor="@color/white" />

    </RelativeLayout>

    <TextView
        android:id="@+id/desc"
        android:layout_width="@dimen/dialog_fixed_width_major"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/main_content"
        android:textColor="@color/white" />
</RelativeLayout>
